# portaudio-java

./: .gitignore  BuildNotes.md  CMakeLists.txt  README.md  build.gradle  install_manifest.txt
src/main/java/com/portaudio/: PortAudio.java
src/main/jni/: com_portaudio_BlockingStream.h  com_portaudio_PortAudio.c  com_portaudio_PortAudio.h
src/test/com/portaudio/: TestBasic.java
src/test/java/com/portaudio/: TestBasic.java
